--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1><span class="heading">TODO</span> List</h1>
     <div class="input_div">
-        <input type="text" class="input" placeholder="Pratik What do you want to do... ">
+        <input type="text" class="input" placeholder="What do you want to do... ">
         <button class="addButton"><i class="fas fa-plus"></i></button>
     </div>
 
